# taily

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py  standardese.config
cmake/: config.cmake.in
examples/: CMakeLists.txt  store_features.cpp  taily.cpp
include/: taily.hpp
test/: CMakeLists.txt  test.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
